--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     
 <head>
-    <meta charset="UTF-8>"
+    <meta charset="UTF-8">
+    <title>Portafolio de Eder Montes</title>
 </head> 
 
 <body>
